[package]
name = "box_raw_ptr"
version = "2.1.0"
authors = ["Rocco Jenson <roccojenson35@gmail.com>"]
description = "A Rust library providing safe wrappers for working with raw pointer. These raw pointers are `*const T` and `*mut T`. These wrappers ensure memory safety by encapsulating the raw pointers in safe abstractions and providing safe methods for working with them."
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/box_raw_ptr"
homepage = "https://github.com/Rocco-Jenson/box_raw_ptr/"
repository = "https://github.com/Rocco-Jenson/box_raw_ptr/"

[workspace]
members = ["example"]

[build-dependencies]
cc = "1.0.99"

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
debug = false
panic = 'abort'
